# adder

./: .gitignore  CHANGELOG.md  Dockerfile.worker  README.md  pyproject.toml
.github/workflows/: integration.yml  release.yml  test.yml
adder/: __init__.py  cli.py  config.py  cost.py  env.py  errors.py  executor.py  joblib_backend.py  map.py  pool.py  serialize.py  session.py  worker.py
tests/: conftest.py
tests/integration/: conftest.py  test_joblib_sklearn.py  test_map.py
tests/unit/: test_cli.py  test_config.py  test_cost.py  test_env.py  test_env_extra.py  test_errors.py  test_executor.py  test_executor_extra.py  test_joblib.py  test_joblib_extra.py  test_pool.py  test_serialize.py  test_session.py  test_session_collect.py  test_tolerant.py
