[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adder"
version = "0.1.0"
description = "Cloud bursting for Python — AWS parallel map"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "boto3>=1.34",
    "cloudpickle>=3.0",
    "rich>=13.0",
    "click>=8.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "moto[s3,ecs,ecr,iam,sts]>=5.0",
    "mypy",
    "ruff",
    "hatch",
    "requests",
    "scikit-learn",
]

[project.scripts]
adder = "adder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["adder"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-cov",
    "moto[s3,ecs,ecr,iam,sts]>=5.0",
    "mypy",
    "ruff",
    "requests",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/unit -v {args}"
test-cov = "pytest tests/unit -v --cov=adder --cov-report=term-missing {args}"

[tool.hatch.envs.integration]
dependencies = [
    "pytest>=7.0",
    "pytest-cov",
    "moto[s3,ecs,ecr,iam,sts]>=5.0",
    "requests",
    "scikit-learn",
]

[tool.hatch.envs.integration.scripts]
test = "pytest tests/ -v {args}"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
